--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marlon Mavinier</title>
 </head>
 <body>
+  <h1>Testing CSS</h1>
   <p>Hello world!</p>
 </body>
 </html>
